<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_margin"
        android:layout_marginRight="@dimen/double_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:clickable="true"
        android:contentDescription="@string/add_new_task"
        android:tint="@color/white"
        app:backgroundTint="@color/purple_200"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_clip"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_notasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks_yet"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/list_view"
        app:layout_constraintStart_toStartOf="@+id/list_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_notasks_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_margin"
        android:text="@string/no_tasks_prompt"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notasks" />


</androidx.constraintlayout.widget.ConstraintLayout>